Added Tests for pos and invoice modules